[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
bandit = "^1.7.7"
pylint = "^3.0.3"
isort = "^5.13.2"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
radon = "^6.0.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[tool.bandit]
exclude_dirs = ["tests",]

[tool.mypy]
exclude = ["tests",]

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

# Tutorial:
# https://radon.readthedocs.io/en/latest/commandline.html#radon-configuration-files
[tool.radon]
exclude = "test_*.py"
cc_min = "A"
cc_max = "C"
average = true
total_average = true
show_complexity = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
